--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -1,5 +1,6 @@
 ru:
   simple_form:
+    button:
     "yes": "Да"
     "no": "Нет"
     required:
@@ -36,4 +37,3 @@ ru:
 #        defaults:
 #          name: "Имя пользователя для входа в систему."
 #          password: "Пожалуйста, не используйте спецсимволы."
-
