--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -63,3 +63,14 @@ en:
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
+  controllers:
+    events:
+      created: ""
+      updated: ""
+      destroyed: ""
+    users:
+      updated: ""
+  app:
+    company: ""
+  confirmation:
+    are_you_sure: ""
