password reset form

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -38,3 +38,4 @@ ru:
     delete: "Удалить"
     update: "Изменить"
     back: "Вернуться"
+    send_instructions: "Выслать инструкции по востановлению пароля"
