--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -86,6 +86,7 @@ en:
     new_event: ""
     forgot_password: ""
     change_password: ""
+    edit_profile: ""
   links:
     sign_in: ""
     exit: ""
