--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,3 +41,7 @@ en:
     back: ""
     send_instructions: ""
     create: ""
+    send: ""
+    subscribe: ""
+    password_edit: ""
+    profile_edit: ""
