added avatars to users and photo to events

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -78,6 +78,10 @@ en:
       created: ""
       error: ""
       destroyed: ""
+    photos:
+      created: ""
+      error: ""
+      destroyed: ""
   app:
     company: ""
   confirmation:
@@ -97,6 +101,9 @@ en:
     edit_profile: ""
     create: ""
     created: ""
+    avatar: ""
+    photo_add: ""
+    photo: ""
   links:
     sign_in: ""
     exit: ""
