add photo mailing

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -134,3 +134,9 @@ en:
       event: ""
       author: ""
       owner: ""
+    photo:
+      title: ""
+      owner: ""
+      datetime: ""
+      event: ""
+      author: ""
