--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -54,7 +54,7 @@ ru:
 
   app:
     name: "Шашлычная"
-    company: "Не всегда хороший программист"
+    company: "Агъдау патруль"
   confirmation:
     are_you_sure: "Точно удалить?"
   titles:
