--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -83,6 +83,8 @@ en:
       created: ""
       error: ""
       destroyed: ""
+    event:
+      wrong_pincode: ""
   app:
     company: ""
   confirmation:
@@ -106,6 +108,7 @@ en:
     photo_add: ""
     photo: ""
     photos: ""
+    pincode: ""
   links:
     sign_in: ""
     exit: ""
@@ -155,3 +158,7 @@ en:
         change_your_password: ""
         confirm_new_password: ""
         new_password: ""
+  activerecord:
+    attributes:
+      event:
+        pincode: ""
